# container

./: .clang-format  .config  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README  README.md  TODO.md  configure  container.json
.github/workflows/: c-cpp.yml  rust.yml
docs/: README.md  busybox.md  overlayfs.md  sha256.md  veth-pair.md
examples/kvm/: Makefile  guest.c  guest16.s  kvm.c  payload.ld
images/: README.md  image.json
images/oci/images/: index.json
include/: c_cgroup.h  c_namespace.h  c_signal.h  config.h  container.h  container_helper.h  dbg.h  pidfile.h
include/bindings/: container_images.h
include/c_cgroup/: cpu.h  cpuacct.h  cpuset.h  memory.h  module.h
include/c_namespace/: mnt.h  net.h  ns_module.h  nscgroup.h  pid.h  uts.h
libs/container-images/: Cargo.toml  binding.h  build.rs
libs/container-images/src/: binding.rs  image_pack.rs  lib.rs
run/: pidfile
scripts/: .bashrc  cJSON  cgroup_attach  minimun_rootfs  net_namespace_attach  net_namespace_init  netns_preinit.sh
src/: c_cgroup.c  c_cgroup_cpu.c  c_cgroup_cpuacct.c  c_cgroup_cpuset.c  c_cgroup_memory.c  c_namespace.c  c_namespace_mnt.c  c_namespace_net.c  c_namespace_uts.c  c_signal.c  config.c  container.c  deamon.c  image_build.c  pidfile.c
