[package]
name = "container-images"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0.73"
bindgen = "0.61.0"

[dependencies]
tar = "0.4.38"
libc = "0.2"
flate2 = "1.0"

[profile.release]
lto = true
opt-level = 2
